[tool.poetry]
name = "log-and-waf-alarm-test"
version = "0.1.0"
description = ""
authors = ["KKamJi <xowl5460@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.68"
requests = "^2.32.3"
aiohttp = "^3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
